# request-manager

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: package-testing.yaml  pypi-publish.yaml
reports/coverage/: coverage.xml
src/request_manager/: __init__.py  exceptions.py  logger.py  manager.py  types.py
src/request_manager/httpx/: __init__.py  client.py
tests/: conftest.py  test_failure.py  test_run.py
tests/mocks/: client.py
